Release 2.4.0
- Changed javaw.exe to java.exe in a comment.

- Removed a useless line break after a comment to make them look like other comments.

- Fixed 7z not found error when trying to download in-built Java when no patched server JAR is found.

- Fixed GC logging not working.

- Fixed blank new lines performance & failing.

- Fixed sync-chunk-writes and PluginMetrics auto changes not working.

- Added code generation support for Client, Linux & macOS.

- Fixed timeout command sometimes not working.

- Backported some JVM flags that their defaults changed in Java 8 > to Java 8 that seem to improve performance.

- Fixed SurvivorRatio must be less than or equal to ergonomic value error on lower heap sizes.

- Disabled JVMCI & truffle by default.

- Fixed JVM heap dumps not cleaning.

- Added more explanations to settings with comments.

- Added warnings for some unsafe options.

- Improved startup time performance.

Signed-off-by: Mustafa ÖNCEL <support@lifemcserver.com>